tests/baselines/reference/newNonReferenceType.errors.txt
tests/cases/compiler/newNonReferenceType.ts(1,13): error TS2552: Cannot find name 'any'. Did you mean 'NaN'?
tests/cases/compiler/newNonReferenceType.ts(2,13): error TS2552: Cannot find name 'boolean'. Did you mean 'Boolean'?


==== tests/cases/compiler/newNonReferenceType.ts (2 errors) ====
    var a = new any();
                ~~~
!!! error TS2552: Cannot find name 'any'. Did you mean 'NaN'?
    var b = new boolean(); // error
                ~~~~~~~
!!! error TS2552: Cannot find name 'boolean'. Did you mean 'Boolean'?
    